--- a/student.ipynb
+++ b/student.ipynb
@@ -15,13 +15,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DATA UNDERSTANDING & CLEANING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Import the necessary libraries***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.style.use('seaborn')\n",
+    "import seaborn as sns\n",
+    "#Import Numpy and the Pandas Package\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "#Supress Warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "#Import StatsModel\n",
+    "import scipy.stats as stats\n",
+    "import statsmodels.api as sm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here - remember to use markdown cells for comments as well!"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -40,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
