--- a/student.ipynb
+++ b/student.ipynb
@@ -396,10 +396,429 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - The data is loaded from a CSV file named \"kc_house_data.csv\" into a Pandas DataFrame.\n",
+    " - It has 20 columns with 21597 rows\n",
+    " - The data contains missing values in the columns : waterfront, view, yr_renovated and zipcode\n",
+    " - Waterfront, view, and year-renovated are the only columns with missing values\n",
+    " -The following variables had a strong positive correlation with price: * sqft_living, sqft_above, sqft_living15, and bathrooms\n",
+    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Clean the kc_house_data.csv dataset***"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>sqft_living</th>\n",
+       "      <th>sqft_lot</th>\n",
+       "      <th>floors</th>\n",
+       "      <th>waterfront</th>\n",
+       "      <th>view</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sqft_above</th>\n",
+       "      <th>sqft_basement</th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>yr_renovated</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>sqft_living15</th>\n",
+       "      <th>sqft_lot15</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7129300520</th>\n",
+       "      <td>2014-10-13</td>\n",
+       "      <td>221900.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1180</td>\n",
+       "      <td>5650</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>Average</td>\n",
+       "      <td>7 Average</td>\n",
+       "      <td>1180</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1955</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98178</td>\n",
+       "      <td>47.5112</td>\n",
+       "      <td>-122.257</td>\n",
+       "      <td>1340</td>\n",
+       "      <td>5650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6414100192</th>\n",
+       "      <td>2014-12-09</td>\n",
+       "      <td>538000.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>2570</td>\n",
+       "      <td>7242</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>Average</td>\n",
+       "      <td>7 Average</td>\n",
+       "      <td>2170</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>1951</td>\n",
+       "      <td>1991.0</td>\n",
+       "      <td>98125</td>\n",
+       "      <td>47.7210</td>\n",
+       "      <td>-122.319</td>\n",
+       "      <td>1690</td>\n",
+       "      <td>7639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5631500400</th>\n",
+       "      <td>2015-02-25</td>\n",
+       "      <td>180000.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>770</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>Average</td>\n",
+       "      <td>6 Low Average</td>\n",
+       "      <td>770</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>98028</td>\n",
+       "      <td>47.7379</td>\n",
+       "      <td>-122.233</td>\n",
+       "      <td>2720</td>\n",
+       "      <td>8062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2487200875</th>\n",
+       "      <td>2014-12-09</td>\n",
+       "      <td>604000.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>7 Average</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>910.0</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98136</td>\n",
+       "      <td>47.5208</td>\n",
+       "      <td>-122.393</td>\n",
+       "      <td>1360</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1954400510</th>\n",
+       "      <td>2015-02-18</td>\n",
+       "      <td>510000.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>1680</td>\n",
+       "      <td>8080</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>Average</td>\n",
+       "      <td>8 Good</td>\n",
+       "      <td>1680</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>98074</td>\n",
+       "      <td>47.6168</td>\n",
+       "      <td>-122.045</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>7503</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 date     price  bedrooms  bathrooms  sqft_living  sqft_lot  \\\n",
+       "id                                                                            \n",
+       "7129300520 2014-10-13  221900.0         3       1.00         1180      5650   \n",
+       "6414100192 2014-12-09  538000.0         3       2.25         2570      7242   \n",
+       "5631500400 2015-02-25  180000.0         2       1.00          770     10000   \n",
+       "2487200875 2014-12-09  604000.0         4       3.00         1960      5000   \n",
+       "1954400510 2015-02-18  510000.0         3       2.00         1680      8080   \n",
+       "\n",
+       "            floors waterfront  view  condition          grade  sqft_above  \\\n",
+       "id                                                                          \n",
+       "7129300520     1.0        NaN  NONE    Average      7 Average        1180   \n",
+       "6414100192     2.0         NO  NONE    Average      7 Average        2170   \n",
+       "5631500400     1.0         NO  NONE    Average  6 Low Average         770   \n",
+       "2487200875     1.0         NO  NONE  Very Good      7 Average        1050   \n",
+       "1954400510     1.0         NO  NONE    Average         8 Good        1680   \n",
+       "\n",
+       "           sqft_basement  yr_built  yr_renovated  zipcode      lat     long  \\\n",
+       "id                                                                            \n",
+       "7129300520           0.0      1955           0.0    98178  47.5112 -122.257   \n",
+       "6414100192         400.0      1951        1991.0    98125  47.7210 -122.319   \n",
+       "5631500400           0.0      1933           NaN    98028  47.7379 -122.233   \n",
+       "2487200875         910.0      1965           0.0    98136  47.5208 -122.393   \n",
+       "1954400510           0.0      1987           0.0    98074  47.6168 -122.045   \n",
+       "\n",
+       "            sqft_living15  sqft_lot15  \n",
+       "id                                     \n",
+       "7129300520           1340        5650  \n",
+       "6414100192           1690        7639  \n",
+       "5631500400           2720        8062  \n",
+       "2487200875           1360        5000  \n",
+       "1954400510           1800        7503  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. Convert 'date' to a datetime object\n",
+    "data['date'] = pd.to_datetime(data['date'])\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>sqft_living</th>\n",
+       "      <th>sqft_lot</th>\n",
+       "      <th>floors</th>\n",
+       "      <th>waterfront</th>\n",
+       "      <th>view</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>grade</th>\n",
+       "      <th>sqft_above</th>\n",
+       "      <th>sqft_basement</th>\n",
+       "      <th>yr_built</th>\n",
+       "      <th>yr_renovated</th>\n",
+       "      <th>zipcode</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>sqft_living15</th>\n",
+       "      <th>sqft_lot15</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [date, price, bedrooms, bathrooms, sqft_living, sqft_lot, floors, waterfront, view, condition, grade, sqft_above, sqft_basement, yr_built, yr_renovated, zipcode, lat, long, sqft_living15, sqft_lot15]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. Check for duplicates\n",
+    "duplicates_with_rows = data[data.duplicated()]\n",
+    "duplicates_with_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 3. Handle missing values in sqft_living to fill missing values with the mean:\n",
+    "data['sqft_living'] = data['sqft_living'].fillna(data['sqft_living'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.dropna(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 15762 entries, 6414100192 to 1523300157\n",
+      "Data columns (total 20 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   date           15762 non-null  datetime64[ns]\n",
+      " 1   price          15762 non-null  float64       \n",
+      " 2   bedrooms       15762 non-null  int64         \n",
+      " 3   bathrooms      15762 non-null  float64       \n",
+      " 4   sqft_living    15762 non-null  int64         \n",
+      " 5   sqft_lot       15762 non-null  int64         \n",
+      " 6   floors         15762 non-null  float64       \n",
+      " 7   waterfront     15762 non-null  object        \n",
+      " 8   view           15762 non-null  object        \n",
+      " 9   condition      15762 non-null  object        \n",
+      " 10  grade          15762 non-null  object        \n",
+      " 11  sqft_above     15762 non-null  int64         \n",
+      " 12  sqft_basement  15762 non-null  object        \n",
+      " 13  yr_built       15762 non-null  int64         \n",
+      " 14  yr_renovated   15762 non-null  float64       \n",
+      " 15  zipcode        15762 non-null  int64         \n",
+      " 16  lat            15762 non-null  float64       \n",
+      " 17  long           15762 non-null  float64       \n",
+      " 18  sqft_living15  15762 non-null  int64         \n",
+      " 19  sqft_lot15     15762 non-null  int64         \n",
+      "dtypes: datetime64[ns](1), float64(6), int64(8), object(5)\n",
+      "memory usage: 2.5+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ***How we handled missing values in each column***\n",
+    " - We found no duplicate rows\n",
+    " - Then missing values in the column sqft_living were filled with the average value\n",
+    " - Since the other column didn't have enough data to fill the missing values we dropped those rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
