--- a/student.ipynb
+++ b/student.ipynb
@@ -955,6 +955,405 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "***Clean the columns_name.md dataset***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td># Column Names and Descriptions for King Count...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>* `id` - Unique identifier for a house\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>* `date` - Date house was sold\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>* `price` - Sale price (prediction target)\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>* `bedrooms` - Number of bedrooms\\n</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                Text\n",
+       "0  # Column Names and Descriptions for King Count...\n",
+       "1           * `id` - Unique identifier for a house\\n\n",
+       "2                   * `date` - Date house was sold\\n\n",
+       "3       * `price` - Sale price (prediction target)\\n\n",
+       "4                * `bedrooms` - Number of bedrooms\\n"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['Column name', 'Descriptions']] = df['Text'].str.split('-', n=1, expand=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop the original 'Text' column\n",
+    "df.drop(columns=['Text'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove rows where 'Descriptions' column contains 'None'\n",
+    "df = df[df['Descriptions'].notna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove asterisks from 'Column name' column\n",
+    "df['Column name'] = df['Column name'].str.replace('*', '').str.strip()\n",
+    "\n",
+    "# Remove leading and trailing whitespaces from 'Descriptions' column\n",
+    "df['Descriptions'] = df['Descriptions'].str.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column name</th>\n",
+       "      <th>Descriptions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Column name, Descriptions]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_duplicates = df[df.duplicated()]\n",
+    "df_duplicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column name</th>\n",
+       "      <th>Descriptions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>`id`</td>\n",
+       "      <td>Unique identifier for a house</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>`date`</td>\n",
+       "      <td>Date house was sold</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>`price`</td>\n",
+       "      <td>Sale price (prediction target)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>`bedrooms`</td>\n",
+       "      <td>Number of bedrooms</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>`bathrooms`</td>\n",
+       "      <td>Number of bathrooms</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>`sqft_living`</td>\n",
+       "      <td>Square footage of living space in the home</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>`sqft_lot`</td>\n",
+       "      <td>Square footage of the lot</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>`floors`</td>\n",
+       "      <td>Number of floors (levels) in house</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>`waterfront`</td>\n",
+       "      <td>Whether the house is on a waterfront</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>`view`</td>\n",
+       "      <td>Quality of view from house</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>`condition`</td>\n",
+       "      <td>How good the overall condition of the house is...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>`grade`</td>\n",
+       "      <td>Overall grade of the house. Related to the con...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>`sqft_above`</td>\n",
+       "      <td>Square footage of house apart from basement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>`sqft_basement`</td>\n",
+       "      <td>Square footage of the basement</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>`yr_built`</td>\n",
+       "      <td>Year when house was built</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>`yr_renovated`</td>\n",
+       "      <td>Year when house was renovated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>`zipcode`</td>\n",
+       "      <td>ZIP Code used by the United States Postal Service</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>`lat`</td>\n",
+       "      <td>Latitude coordinate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>`long`</td>\n",
+       "      <td>Longitude coordinate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>`sqft_living15`</td>\n",
+       "      <td>The square footage of interior housing living ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>`sqft_lot15`</td>\n",
+       "      <td>The square footage of the land lots of the nea...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Column name                                       Descriptions\n",
+       "1              `id`                      Unique identifier for a house\n",
+       "2            `date`                                Date house was sold\n",
+       "3           `price`                     Sale price (prediction target)\n",
+       "4        `bedrooms`                                 Number of bedrooms\n",
+       "5       `bathrooms`                                Number of bathrooms\n",
+       "6     `sqft_living`         Square footage of living space in the home\n",
+       "7        `sqft_lot`                          Square footage of the lot\n",
+       "8          `floors`                 Number of floors (levels) in house\n",
+       "9      `waterfront`               Whether the house is on a waterfront\n",
+       "11           `view`                         Quality of view from house\n",
+       "13      `condition`  How good the overall condition of the house is...\n",
+       "15          `grade`  Overall grade of the house. Related to the con...\n",
+       "17     `sqft_above`        Square footage of house apart from basement\n",
+       "18  `sqft_basement`                     Square footage of the basement\n",
+       "19       `yr_built`                          Year when house was built\n",
+       "20   `yr_renovated`                      Year when house was renovated\n",
+       "21        `zipcode`  ZIP Code used by the United States Postal Service\n",
+       "22            `lat`                                Latitude coordinate\n",
+       "23           `long`                               Longitude coordinate\n",
+       "24  `sqft_living15`  The square footage of interior housing living ...\n",
+       "25     `sqft_lot15`  The square footage of the land lots of the nea..."
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 21 entries, 1 to 25\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   Column name   21 non-null     object\n",
+      " 1   Descriptions  21 non-null     object\n",
+      "dtypes: object(2)\n",
+      "memory usage: 504.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(21, 2)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - The dataset had one column that had two columns inside it, so we split each row using dash as the separator (-)\n",
+    " - Thus we ended up having two columns : Column Names and Descriptions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
