--- a/student.ipynb
+++ b/student.ipynb
@@ -3554,7 +3554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The RMSE value of 153,278 indicates the average magnitude of the prediction errors made by the model. Specifically, on average, the model's predictions are off by approximately $153,278 from the actual target values. This model is marginally better than ML3 but out of all our models it is the most accurate one"
+    "The RMSE value of 153,278 indicates the average magnitude of the prediction errors made by the model. Specifically, on average, the model's predictions are off by approximately $153,278 from the actual target values. This model is marginally better than ML3 but out of all our models it is the most accurate one."
    ]
   },
   {
@@ -3567,7 +3567,7 @@
     "\n",
     "1. It had the highest R squared value meaning, compared to the other models more variation in the dependent variable are accounted for by the independent variables, suggesting that the model provides a better fit to the data\n",
     "2. It had the lowest RMSE value, showing that it is the most accurate model.\n",
-    "3. All the independent variables in the model were statisitically significant, as all of them had a p_value of less than 0.05"
+    "3. All the independent variables in the model were statisitically significant, as all of them had a p_value of less than 0.05."
    ]
   }
  ],
