--- a/student.ipynb
+++ b/student.ipynb
@@ -3482,7 +3482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The RMSE value of 1,590,312,845 indicates the average magnitude of the prediction errors made by the model. Specifically, on average, the model's predictions are off by approximately $1,590,312,845 from the actual target values, which is quite large. Which out of all the models we have so far this is our most inaccurate model and by quite some margin."
+    "The RMSE value of 181,990 indicates the average magnitude of the prediction errors made by the model. Specifically, on average, the model's predictions are off by approximately $181,990.90 from the actual target values.This means that the model's predictions, on average, have an error of around $181,990.90 compared to the actual prices of the houses in the test dataset."
    ]
   },
   {
