--- a/student.ipynb
+++ b/student.ipynb
@@ -3862,13 +3862,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model of Choice\n",
+    "## Recommendation:\n",
     "\n",
-    "After creating and interpreting the 5 models that were created, we decided to go with the Multiple Linear Regression Model 4. This is because:\n",
+    "Based on our analysis and evaluation of the multiple linear regression models, we recommend utilizing Model 4 for predicting house prices in your project. Here's why:\n",
     "\n",
-    "1. It had the highest R squared value meaning, compared to the other models more variation in the dependent variable are accounted for by the independent variables, suggesting that the model provides a better fit to the data\n",
-    "2. It had the lowest RMSE value, showing that it is the most accurate model.\n",
-    "3. All the independent variables in the model were statisitically significant, as all of them had a p_value of less than 0.05."
+    "1. **Higher R-squared Value**: Model 4 demonstrated the highest R-squared value among all the models, indicating that it explains a greater proportion of the variance in housing prices compared to the other models. This suggests that Model 4 provides a better fit to the data by capturing more variation in the dependent variable through the independent variables.\n",
+    "\n",
+    "2. **Lower RMSE Value**: The Root Mean Squared Error (RMSE) for Model 4 was the lowest among all the models, signifying that its predictions are, on average, closest to the actual house prices. This indicates higher accuracy in predicting house prices compared to the other models.\n",
+    "\n",
+    "3. **Statistical Significance of Independent Variables**: All independent variables included in Model 4 were statistically significant, as evidenced by their p-values being less than 0.05. This means that each independent variable contributes significantly to explaining the variation in house prices.\n",
+    "\n",
+    "By using Model 4, you can make more accurate predictions of house prices. Additionally, the model provides insights into which factors most strongly influence house prices, enabling informed decision-making when it comes to renovations.\n"
    ]
   }
  ],
